# oneblock-substrate-course

./: .gitignore  Benchmark and Launch.pptx  Makefile  README.md  customSpec.json  customSpecRaw.json
erc20/: Cargo.toml  lib.rs
pallets/example/: Cargo.toml
pallets/example/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
substrate-front-end-template/src/: App.js  Kitties.js  KittyAvatar.js  KittyCards.js  TemplateModule.js
