[package]
name = "pallet-example"
version = "1.0.0"
description = "FRAME pallet example."
authors = ["sunwenming <https://github.com/sunwenming>"]
homepage = "https://github.com/sunwenming"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/hello-substrate/oneblock-substrate-course/tree/node-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

serde = { version = '1', default-features = false, features = ['derive'] }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
